fix spacing on on mobile and radial glow underflow

--- a/_harp/css/pages/landing/_landing-page.scss
+++ b/_harp/css/pages/landing/_landing-page.scss
@@ -24,9 +24,9 @@
 	margin-bottom:10px;
 	position: relative;
 	width: 70px;
-	padding-left: 2px;
+	padding: 32px 0 0 2px;
 	text-align: center;
-	background: radial-gradient(circle, rgba(255,255,255,0.5) 10%, rgba(255,255,255,0) 60%, rgba(255,255,255,0) 30%);
+	background: radial-gradient(circle 60px,rgba(255,255,255,0.5) 47%,rgba(255,255,255,0) 60%,rgba(255,255,255,0) 30%);
 	img {
 		height:70px;
 		width: 55px;
